--- a/payme-client/src/containers/Signup/Signup.css
+++ b/payme-client/src/containers/Signup/Signup.css
@@ -17,7 +17,7 @@
   flex-direction: column;
   width: 40%;
   max-width: 400px;
-  padding: 50px;
+  padding: 30px 50px;
   -webkit-box-shadow: -1px 7px 22px 6px rgba(0,0,0,0.19);
   -moz-box-shadow: -1px 7px 22px 6px rgba(0,0,0,0.19);
   box-shadow: -1px 7px 22px 6px rgba(0,0,0,0.19);
@@ -29,9 +29,14 @@
 }
 
 .form__container .MuiButtonBase-root {
-  margin-top: 60px;
+  margin-top: 10px;
   width: 100%;
   margin-bottom: 20px;
+}
+
+.form__container fieldset {
+  margin: 5px;
+  margin-top: 20px;
 }
 
 .signup__actions {
