--- a/science-center-front/src/App.css
+++ b/science-center-front/src/App.css
@@ -15,13 +15,17 @@
 
 .App-header {
   background-color: #282c34;
-  min-height: 100vh;
+  min-height: 10vh;
   display: flex;
   flex-direction: column;
   align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
+  padding-top: 30px;
+  font-size: 48px;
   color: white;
+}
+
+.App-body {
+  padding: 30px;
 }
 
 .App-link {
