--- a/bitcoin-payment/src/main/resources/templates/index.html
+++ b/bitcoin-payment/src/main/resources/templates/index.html
@@ -1,11 +1,12 @@
 <!DOCTYPE html>
-<html>
-   <head>
-      <meta charset = "UTF-8" />
-      <link href = "css/styles.css" rel = "stylesheet"/>
-      <title>Spring Boot Application</title>
-   </head>
-   <body>
-      <h4>Welcome to Thymeleaf Spring Boot web application</h4>
-   </body>
+<html xmlns:th="http://www.thymeleaf.org">
+<head>
+<meta charset="UTF-8" />
+<link href="css/styles.css" rel="stylesheet" />
+<title>Spring Boot Application</title>
+</head>
+<body>
+	<h4>Welcome to Bitcoin</h4>
+	<p>Application ID:</p><p th:text="${appId}"></p>
+</body>
 </html>
