--- a/card-payment/src/main/resources/templates/error.html
+++ b/card-payment/src/main/resources/templates/error.html
@@ -13,8 +13,7 @@
 <div class="jumbotron text-center">
 </div>
 <div class="jumbotron text-center">
-  <h1 class="display-3">Error!</h1>
-  <p class="lead"><strong>Thank you for your payment.</strong> </p>
+  <h1 class="display-3">Payment error!</h1>
   <hr>
  
 </div>
