--- a/card-payment/src/main/resources/templates/successfulConfig.html
+++ b/card-payment/src/main/resources/templates/successfulConfig.html
@@ -3,7 +3,7 @@
 <head>
 <meta charset="UTF-8" />
 
-<title>Failed</title>
+<title>Successful</title>
 
 <link href="../static/css/bootstrap.min.css" rel="stylesheet" th:href="@{/css/bootstrap.min.css}"/>
 
@@ -13,7 +13,7 @@
 <div class="jumbotron text-center">
 </div>
 <div class="jumbotron text-center">
-  <h1 class="display-3">Payment failed!</h1>
+  <h1 class="display-3">You have successfully configure card payment method!</h1>
   <hr>
  
 </div>
