--- a/bitcoin-payment/src/main/resources/templates/register.html
+++ b/bitcoin-payment/src/main/resources/templates/register.html
@@ -79,7 +79,7 @@
 				success: function(odgovor){
 					console.log('objekat', obj);
 					console.log(odgovor);
-					// window.location.href = odgovor;
+					window.location.href = odgovor;
 				},
 				error: function(odgovor){
 					alert(odgovor.responseText);
