Manje UI izmene.

--- a/bank/src/main/resources/static/css/form.css
+++ b/bank/src/main/resources/static/css/form.css
@@ -5,3 +5,18 @@
 .bg-color {
 	background: #f5f5f5;
 }
+
+.btn-plavo, .btn-primary:active {
+	color: #fff;
+	background: #33cabb;
+	vertical-align: middle;
+	border: none;
+}
+
+/* Change color of buttons when hovered or focused*/
+.btn-plavo:hover, .btn-primary:focus {
+	color: #fff;
+	outline: none;
+	background: #31bfb1;
+}
+
