--- a/bank/src/main/resources/templates/form.html
+++ b/bank/src/main/resources/templates/form.html
@@ -7,92 +7,92 @@
 <script type="text/javascript" th:src="@{/js/form.js}"></script>
 
 <link href="../static/css/form.css" rel="stylesheet"
-	th:href="@{/css/form.css}" />
+  th:href="@{/css/form.css}" />
 <title>Choose payment method</title>
 
 <link href="../static/css/bootstrap.min.css" rel="stylesheet"
-	th:href="@{/css/bootstrap.min.css}" />
-	
+  th:href="@{/css/bootstrap.min.css}" />
+  
 <link
-	href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.11.2/css/all.css"
-	rel="stylesheet" type="text/css" />
+  href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.11.2/css/all.css"
+  rel="stylesheet" type="text/css" />
 
 </head>
 <body class="bg-color">
 
-	<div class="container py-5">
+  <div class="container py-5">
 
-		<!-- For demo purpose -->
-		<div class="row mb-4">
-			<div class="col-lg-8 mx-auto text-center">
-				<h1 class="display-4 ">Confirm Purchase</h1>
-			</div>
-		</div>
-		<!-- End -->
+    <!-- For demo purpose -->
+    <div class="row mb-4">
+      <div class="col-lg-8 mx-auto text-center">
+        <h1 class="display-4 " style="color:#33cabb;">Confirm Purchase</h1>
+      </div>
+    </div>
+    <!-- End -->
 
-		<div class="row">
-			<div class="col-lg-7 mx-auto">
-				<div class="bg-white rounded-lg shadow-sm p-5">
+    <div class="row">
+      <div class="col-lg-7 mx-auto">
+        <div class="bg-white rounded-lg shadow-sm p-5">
 
-					<!-- Credit card form content -->
+          <!-- Credit card form content -->
 
-					<!-- credit card info-->
-					<div>
-						<form id="forma" th:action="@{'http://localhost:5005/payment/confirm/' + ${paymentRequestId}}" method="POST" role="form">
-							<div class="form-group">
-								<label for="cardHolder">Full name (on the card)</label> <input
-									type="text" name="cardHolder" id="cardHolder" placeholder="John Doe" required
-									class="form-control">
-							</div>
-							<div class="form-group">
-								<label for="panNumber">Card number</label>
-								<div class="input-group">
-									<input type="text" name="panNumber" id="panNumber"
-										placeholder="Your card number" class="form-control" required>
-									<div class="input-group-append">
-										<span class="input-group-text text-muted"> <i
-											class="fab fa-cc-visa  mx-1"></i> <i
-											class="fab fa-cc-mastercard  mx-1"></i>
-										</span>
-									</div>
-								</div>
-							</div>
-							<div class="row">
-								<div class="col-sm-8">
-									<div class="form-group">
-										<label><span class="hidden-xs">Expiration date</span></label>
-										<div class="input-group">
-											<input type="number" placeholder="MM" name="mm" id="mm"
-												class="form-control" required> <input type="number"
-												placeholder="YY" name="yy" id="yy" class="form-control" required>
-										</div>
-									</div>
-								</div>
-								<div class="col-sm-4">
-									<div class="form-group mb-4">
-										<label data-toggle="tooltip"
-											title="Three-digits code on the back of your card">CVV
-											<i class="fa fa-question-circle text-muted"></i>
-										</label> <input id="cvv" name="cvv" type="text" required class="form-control">
-									</div>
-								</div>
-
-
-
-							</div>
-							<button type="submit"
-								class="subscribe btn btn-info btn-block rounded-pill shadow-sm">Confirm</button>
-						</form>
-					</div>
-					<!-- End -->
+          <!-- credit card info-->
+          <div>
+            <form id="forma" th:action="@{'http://localhost:5005/payment/confirm/' + ${paymentRequestId}}" method="POST" role="form">
+              <div class="form-group">
+                <label for="cardHolder">Full name (on the card)</label> <input
+                  type="text" name="cardHolder" id="cardHolder" placeholder="John Doe" required
+                  class="form-control">
+              </div>
+              <div class="form-group">
+                <label for="panNumber">Card number</label>
+                <div class="input-group">
+                  <input type="text" name="panNumber" id="panNumber"
+                    placeholder="Your card number" class="form-control" required>
+                  <div class="input-group-append">
+                    <span class="input-group-text text-muted"> <i
+                      class="fab fa-cc-visa  mx-1"></i> <i
+                      class="fab fa-cc-mastercard  mx-1"></i>
+                    </span>
+                  </div>
+                </div>
+              </div>
+              <div class="row">
+                <div class="col-sm-8">
+                  <div class="form-group">
+                    <label><span class="hidden-xs">Expiration date</span></label>
+                    <div class="input-group">
+                      <input type="number" placeholder="MM" name="mm" id="mm"
+                        class="form-control" required> <input type="number"
+                        placeholder="YY" name="yy" id="yy" class="form-control" required>
+                    </div>
+                  </div>
+                </div>
+                <div class="col-sm-4">
+                  <div class="form-group mb-4">
+                    <label data-toggle="tooltip"
+                      title="Three-digits code on the back of your card">CVV
+                      <i class="fa fa-question-circle text-muted"></i>
+                    </label> <input id="cvv" name="cvv" type="text" required class="form-control">
+                  </div>
+                </div>
 
 
-				</div>
-				<!-- End -->
 
-			</div>
-		</div>
-	</div>
+              </div>
+              <button type="submit"
+                class="subscribe btn btn-plavo btn-block rounded-pill shadow-sm">Confirm</button>
+            </form>
+          </div>
+          <!-- End -->
+
+
+        </div>
+        <!-- End -->
+
+      </div>
+    </div>
+  </div>
 
 
 
