Fixed bitcoin registration, added CORS

--- a/bitcoin-payment/src/main/resources/templates/successfulConfig.html
+++ b/bitcoin-payment/src/main/resources/templates/successfulConfig.html
@@ -13,7 +13,7 @@
 <div class="jumbotron text-center">
 </div>
 <div class="jumbotron text-center">
-  <h1 class="display-3">You have successfully configure card payment method!</h1>
+  <h1 class="display-3">You have successfully configured bitcoin payment method!</h1>
   <hr>
  
 </div>
