Sitne UI izmene, fail transakcije kod card-payment servisa

--- a/bank/src/main/resources/templates/form.html
+++ b/bank/src/main/resources/templates/form.html
@@ -81,7 +81,7 @@
 
               </div>
               <button type="submit"
-                class="subscribe btn btn-plavo btn-block rounded-pill shadow-sm">Confirm</button>
+                class="subscribe btn btn-plavo btn-block shadow-sm">Confirm</button>
             </form>
           </div>
           <!-- End -->
