--- a/card-payment/src/main/resources/templates/register.html
+++ b/card-payment/src/main/resources/templates/register.html
@@ -4,12 +4,40 @@
 <meta charset="UTF-8" />
 <script src="https://code.jquery.com/jquery-3.4.1.js"></script>
 
-<link href="../static/css/register.css" rel="stylesheet" th:href="@{/css/register.css}"/>
+
 <title>Register</title>
 
-<link href="../static/css/bootstrap.min.css" rel="stylesheet" th:href="@{/css/bootstrap.min.css}"/>
+<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css">
 <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.11.2/css/all.css" rel="stylesheet" type="text/css" />
+<style>
+.rounded-lg {
+  border-radius: 1rem;
+}
 
+.bg-color {
+	background: #f5f5f5;
+}
+
+.btn-plavo, .btn-primary:active {
+	color: #fff;
+	background: #33cabb;
+	vertical-align: middle;
+	border: none;
+}
+
+/* Change color of buttons when hovered or focused*/
+.btn-plavo:hover, .btn-primary:focus {
+	color: #fff;
+	outline: none;
+	background: #31bfb1;
+}
+
+/* Change color of icons in input forms*/
+.ikonica{
+	color: #33cabb;
+	width: 15px;
+}
+</style>
 </head>
 <body class="bg-color">
 
@@ -42,7 +70,7 @@
 						<input  id="merchantPassword" name="merchantPassword" type="password" class="form-control" placeholder="Merchant password">
 				 	</div>         
 	           
-	              	<button type="submit" class="subscribe btn btn-plavo btn-block rounded-pill shadow-sm"> Register  </button>
+	              	<button type="submit" class="subscribe btn btn-plavo btn-block shadow-sm"> Register  </button>
 	            </form>
 	          </div>
 	          <!-- End registration form-->
@@ -53,7 +81,6 @@
 	</div>
 	<script>
 		$(document).ready(function(){
-			alert('registracija');
 			var formId = 'registerForm';
 			$('#' + formId).submit(function (e) {
 				handleFormRegister(e, formId);
