--- a/paypal-payment/src/main/resources/templates/register.html
+++ b/paypal-payment/src/main/resources/templates/register.html
@@ -4,12 +4,40 @@
 <meta charset="UTF-8" />
 <script src="https://code.jquery.com/jquery-3.4.1.js"></script>
 
-<link href="../static/css/register.css" rel="stylesheet" th:href="@{/css/register.css}"/>
 <title>Register</title>
 
-<link href="../static/css/bootstrap.min.css" rel="stylesheet" th:href="@{/css/bootstrap.min.css}"/>
+<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css">
 <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.11.2/css/all.css" rel="stylesheet" type="text/css" />
 
+<style>
+.rounded-lg {
+  border-radius: 1rem;
+}
+
+.bg-color {
+	background: #f5f5f5;
+}
+
+.btn-plavo, .btn-primary:active {
+	color: #fff;
+	background: #33cabb;
+	vertical-align: middle;
+	border: none;
+}
+
+/* Change color of buttons when hovered or focused*/
+.btn-plavo:hover, .btn-primary:focus {
+	color: #fff;
+	outline: none;
+	background: #31bfb1;
+}
+
+/* Change color of icons in input forms*/
+.ikonica{
+	color: #33cabb;
+	width: 15px;
+}
+</style>
 </head>
 <body class="bg-color">
 
@@ -17,7 +45,7 @@
 	  <!-- Register text -->
 	  <div class="row mb-4">
 	    <div class="col-lg-6 mx-auto text-center">
-	      <h1 class="display-4 ">Register</h1>
+	      <h1 class="display-4 " style="color:#33cabb;">Register</h1>
 	    </div>
 	  </div>
 	  <!-- End -->
@@ -31,17 +59,17 @@
 	            <form  th:action="@{'http://localhost:8200/merchant/addOrUpdate/' + ${appId}}" id="registerForm" role="form" method="POST">
 	            	<div class="input-group form-group">
 						<div class="input-group-prepend">
-							<span class="input-group-text"><i class="fas fa-user"></i></span>
+							<span class="input-group-text"><i class="fas fa-user ikonica"></i></span>
 						</div>
 						<input id="clientId" name="clientId" type="text" class="form-control" placeholder="Paypal client ID">						
 					</div>	              
 	            	<div class="input-group form-group">
 						<div class="input-group-prepend">
-							<span class="input-group-text"><i class="fas fa-user"></i></span>
+							<span class="input-group-text"><i class="fas fa-key ikonica"></i></span>
 						</div>
 						<input id="clientSecret" name="clientSecret" type="text" class="form-control" placeholder="Paypal client secret">						
 					</div>	      	              	
-	              	<button type="submit" class="subscribe btn btn-info btn-block rounded-pill shadow-sm"> Register  </button>
+	              	<button type="submit" class="subscribe btn btn-plavo btn-block shadow-sm"> Register  </button>
 	            </form>
 	          </div>
 	          <!-- End registration form-->
@@ -52,7 +80,6 @@
 	</div>
 	<script>
 		$(document).ready(function(){
-			alert('registracija paypal');
 			var formId = 'registerForm';
 			$('#' + formId).submit(function (e) {
 				handleFormRegister(e, formId);
