--- a/paypal-payment/src/main/resources/templates/success.html
+++ b/paypal-payment/src/main/resources/templates/success.html
@@ -7,5 +7,12 @@
 </head>
 <body>
 	<h4>Plaćanje uspešno izvršeno!</h4>
+	<script>
+		var redirectURL = "[[${redirect}]]";
+		
+		setTimeout(function() {
+			window.location = redirectURL;
+		}, 3000);
+	</script>
 </body>
 </html>
